exp+skill txtupd

--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
         <h2>Internship</h2>
         <ul>
             <li>
-                <strong>AI Research Intern, Genomics,</strong> BGI (Shenzhen) <em>(Spring 2025)</em><br><br>
+                <strong>AI Research Intern, Genomics,</strong> BGI Genomics (Shenzhen) <em>(Spring 2025)</em><br><br>
 
                 During my internship at BGI Shenzhen, I was given the opportunity to contribute to groundbreaking research in AI-driven genomics. 
                 BGI  is one of the world's leading centers for genomic research and bioinformatics, 
