--- a/skills.html
+++ b/skills.html
@@ -70,23 +70,13 @@
             </li>
             <li>
                 <div class="skill-header">
-                    <strong>Java</strong>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 70%;"></div>
-                    </div>
-                </div>
-                Acquainted with Java for software development tasks.<br>
-                <em>Application:</em> Used Java for academic software projects and simulations.
-            </li>
-            <li>
-                <div class="skill-header">
-                    <strong>C++</strong>
+                    <strong>PyTorch</strong>
                     <div class="progress-bar">
                         <div class="progress" style="width: 60%;"></div>
                     </div>
                 </div>
-                Familiar with C++ for performance-critical applications.<br>
-                <em>Application:</em> Applied C++ in engineering tasks on arduino projects and simulations.
+                Acquainted with Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
             </li>
             <li>
                 <div class="skill-header">
@@ -100,9 +90,30 @@
             </li>
             <li>
                 <div class="skill-header">
+                    <strong>Java</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 60%;"></div>
+                    </div>
+                </div>
+                Acquainted with Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
+            </li>
+            <li>
+                <div class="skill-header">
+                    <strong>C++</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 40%;"></div>
+                    </div>
+                </div>
+                Familiar with C++ for performance-critical applications.<br>
+                <em>Application:</em> Applied C++ in engineering tasks on arduino projects and simulations.
+            </li>
+            
+            <li>
+                <div class="skill-header">
                     <strong>HTML, CSS, and JavaScript (JS)</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 50%;"></div>
+                        <div class="progress" style="width: 40%;"></div>
                     </div>
                 </div>
                 Knowledgeable in HTML, CSS, and JavaScript (JS) for structuring web content.<br>
@@ -184,9 +195,9 @@
             </li>
             <li><strong>English:</strong> Advanced English speaker and writer (TOEIC 980/990).
             </li>
-            <li><strong>Spanish:</strong> Intermediate Spanish speaker and writer (B1).
+            <li><strong>Spanish:</strong> Intermediate Spanish speaker and writer (~B1).
             </li>
-            <li><strong>Chinese:</strong> Beginner in Chinese (HSK3).
+            <li><strong>Chinese:</strong> Beginner in Chinese (~HSK3).
             </li>
         </ul>
         <br>
