--- a/skills.html
+++ b/skills.html
@@ -62,11 +62,11 @@
                         <div class="progress" style="width: 80%;"></div>
                     </div>
                 </div>
-                Proficient in PyTorch for developing and optimizing machine learning models, 
-                particularly in genomics and sequence generation applications.<br>
-                <em>Application: </em>Utilized PyTorch to design and train multi-layer Transformer
-                architectures for de novo bacteriophage genome synthesis, improving sequence modeling 
-                and feature representation in bioinformatics research at BGI Shenzhen.
+                Proficient in TensorFlow for developing and training machine learning models, particularly in deep
+                learning applications.<br>
+                <em>Application: </em>Implemented various neural network architectures, including convolutional and
+                recurrent networks, to solve complex problems in image and signal processing, contributing to
+                advancements in brain-computer interface technologies.
             </li>
             <li>
                 <div class="skill-header">
@@ -75,8 +75,11 @@
                         <div class="progress" style="width: 60%;"></div>
                     </div>
                 </div>
-                Acquainted with Java for software development tasks.<br>
-                <em>Application:</em> Used Java for academic software projects and simulations.
+                Proficient in PyTorch for developing and optimizing machine learning models,
+                 particularly in genomics and sequence generation applications.<br>
+                <em>Application:</em> Utilized PyTorch to design and train multi-layer Transformer 
+                architectures for de novo bacteriophage genome synthesis, improving sequence modeling
+                and feature representation in bioinformatics research at BGI Shenzhen.
             </li>
             <li>
                 <div class="skill-header">
