--- a/index.html
+++ b/index.html
@@ -31,24 +31,17 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am a <span></span></h3>
-            <p>As a student exploring engineering and medicine, my journey is deeply rooted in the intersection of these
-                fields.<br>
-                Focusing on machine learning and medical engineering, I am dedicated to exploring neuroscience, genomics, and artificial intelligence.
-                This path has led me into braincomputer interfaces, neuroengineering, and computational
-                genomics, where I develop AI-driven
-                solutions bridging technology with
-                human capability and biological
-                innovation.
-                and drug discovery, where I apply my skills through various projects using Python,
-                MATLAB, and C++ to tackle complex challenges in medicine with deep learning and data-driven insights.
+            <p>At the crossroads of engineering and medicine, I’m dedicated to merging machine learning with medical engineering
+                 to tackle complex challenges and unlock new insights into cognitive states. My work spans neuroscience, genomics,
+                  and AI—areas that not only drive advances in brain–computer interfaces, neuroengineering, and computational genomics, 
+                  but also inspire my dream of deciphering thoughts and decoding dreams as part of my everyday projects.
+                   I utilize Python, MATLAB, and C++ to develop AI-driven solutions that integrate technology with human capability,
+                    spur biological innovation, and enhance drug discovery. 
                 <br>
-                Currently intern at BGI in Shenzhen, I am developing an AI-driven phage genome generation framework using
-                 large language models (LLMs) and multi-layer Transformer architectures.
-                  My work focuses on feature representation for long genetic sequences, 
-                  optimized using evo/evo2 dimensionality reduction.
-                   Additionally, I implement an explainability module to enhance model transparency and control in genome synthesis. 
-                   This method is being validated through practical phage genome testing, 
-                   bridging AI and synthetic biology for real-world applications.
+                As an intern at BGI in Shenzhen, I’m developing an AI-powered phage genome generation framework using large language models
+                 and multi-layer Transformer architectures, focusing on representing long genetic sequences with evo/evo2 dimensionality reduction 
+                 and implementing an explainability module for greater transparency in genome synthesis,
+                  validated through practical phage genome testing.
                 <br>
                
                 Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
