--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am a <span></span></h3>
-            <p>At the crossroads of engineering and medicine, I’m dedicated to merging machine learning with medical engineering
-                 to tackle complex challenges and unlock new insights into cognitive states. My work spans neuroscience, genomics,
-                  and AI—areas that not only drive advances in brain–computer interfaces, neuroengineering, and computational genomics, 
-                  but also inspire my dream of deciphering thoughts and decoding dreams as part of my everyday projects.
-                   I utilize Python, MATLAB, and C++ to develop AI-driven solutions that integrate technology with human capability,
-                    spur biological innovation, and enhance drug discovery. 
+            <p>At the intersection of engineering and medicine, 
+                I want to use deep learning and AI to solve complex health challenges 
+                and advance human well-being. My work bridges AI with biomedical innovation,
+                 aiming to enhance diagnosis, treatment, and our understanding of the human body and mind.
+                  From intelligent health systems to next-generation interfaces and biological engineering,
+                   I explore technologies that push the boundaries of what’s possible—driving both medical 
+                   progress and bold new frontiers in human enhancement. I develop and program AI-powered solutions 
+                   integrating technology with biology to create tools
+                    that support healthier lives and unlock transformative possibilities for the future.
+                    Whether it's brain–computer interfaces, de novo biological design, or precision diagnostics and treatment, 
+                    my goal is simple: help people live healthier, better lives through technology
                 <br>
                 As an intern at BGI in Shenzhen, I’m developing an AI-powered phage genome generation framework using large language models
                  and multi-layer Transformer architectures, focusing on representing long genetic sequences with evo/evo2 dimensionality reduction 
