--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
                    progress and bold new frontiers in human enhancement. I develop and program AI-powered solutions 
                    integrating technology with biology to create tools
                     that support healthier lives and unlock transformative possibilities for the future.
-                    Whether it's brain–computer interfaces, de novo biological design, or precision diagnostics and treatment, 
+                    Whether it's brain–chips, de novo biological design, or precision diagnostics and treatment, 
                     my goal is simple: help people live healthier, better lives through technology
                 <br>
-                As an intern at BGI in Shenzhen, I’m developing an AI-powered phage genome generation framework using large language models
+                Currenlty as an intern at BGI in Shenzhen, I’m developing an AI-powered phage genome generation framework using large language models
                  and multi-layer Transformer architectures, focusing on representing long genetic sequences with evo/evo2 dimensionality reduction 
-                 and implementing an explainability module for greater transparency in genome synthesis,
-                  validated through practical phage genome testing.
+                 and implementing an explainability module for greater transparency in genome synthesis.
                 <br>
                
                 Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
