--- a/skills.html
+++ b/skills.html
@@ -129,13 +129,13 @@
         <br>
         <ul>
 
-            <li><strong>AI and Machine Learning in programming:</strong> Skilled with multiple programming libraries
+            <li><strong>AI and Deep Learning in programming:</strong> Skilled with multiple programming libraries
                 such as TensorFlow, Keras, PyTorch, SciKit-learn, Pandas, Seaborn, or MNE and various machine learning
                 models, including Deep Neural Networks, CNN, XGBoost, SVM, Random Forest and Computer Vision techniques.
             </li>
-            <li><strong>Machine Learning:</strong> Proficient in supervised and unsupervised learning, neural networks,
+            <li><strong>Deep Learning:</strong> Proficient in supervised and unsupervised learning, neural networks,
                 and deep learning models for predictive analytics and pattern recognition as well as different types of
-                neural networks (CNN, RNN, LSTM, GAN)
+                neural networks (CNN, RNN, LSTM, transformers)
             </li>
             <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
                 draw meaningful conclusions.
